# mcp3424-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: build.yaml
examples/stm32g4/: Cargo.toml
examples/stm32g4/.cargo/: config.toml
examples/stm32g4/src/: main.rs
src/: config.rs  doc.rs  driver.rs  error.rs  lib.rs
src/cfg/: channel.rs  gain.rs  mod.rs  mode.rs  resolution.rs
src/mode/: continuous.rs  mod.rs  multishot.rs  oneshot.rs
