[package]
name = "mcp3424-stm32g4-example"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp3424 = { path = "../..", default-features = false, features = ["defmt", "uom", "stream"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"]}
cortex-m-rt = { version = "0.7.3" }
defmt = { version = "0.3.*" }
defmt-rtt = { version = "0.4.0" }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.1.0", features =  ["stm32g431kb", "defmt", "time-driver-any", "memory-x", "unstable-pac", "exti"]}
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-alloc = { version = "0.6.0" }
embedded-hal-async = "1.0.0"
futures = { version = "0.3.*", default-features = false }
panic-probe = { version = "0.3.*" }
uom = { version = "0.36.0", default-features = false, features = ["si"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a7d1abf6b79d25632a1966ed9f27fa21ab3e0e47" }
